--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint",
     "test": "jest",
     "start": "nodemon src/index.js"
-  },    
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,5 +19,12 @@
     "jest": "^29.5.0",
     "mongoose": "^7.2.3",
     "nexus": "^1.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
