--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint",
+    "lint": "eslint ./src --fix",
     "test": "jest",
     "start": "nodemon src/index.js"
   },
